<li>T. Gestión Administrativa(LOE)</li>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 <body>
-    <h1> Mi página web</h1>
+    <section>
+        <div> 
+            <h1> Julián Luis Portalés García</h1>
+            <p> Muy buenas, bienvenido a mi pagina web de presentación.</p>
+            <p>Aquí teneis los titulos de los que dispongo:</p>
+            <li>T. Gestión Administrativa(LOE)</li>
+            <li>T. Sistemas Microinformáticos y Redes (LOE)</li>
+            <li>T.S. Administración de Sistemas Informáticos en Red (LOE) (en proceso)</li>
+         </div>
+    </section>     
 </body>
+<footer>
+        <a href="https://github.com/juporgar/">Github</a>
+        <a href="https://twitter.com/?lang=es/">Twitter</a>
+        <a href="https://www.google.com/">Contacto</a>
+</footer>
 </html>
