html boilerplate created

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>T. Gestión Administrativa(LOE)</li>
             <li>T. Sistemas Microinformáticos y Redes (LOE)</li>
             <li>T.S. Administración de Sistemas Informáticos en Red (LOE) (en proceso)</li>
+            <li>Formación de programación web</li>
          </div>
     </section>     
 </body>
