--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 
 <html lang="es">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi pagina web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 <body>
     <section>
-        <div> 
+        <div class="container"> 
             <h1> Julián Luis Portalés García</h1>
             <p> Muy buenas, bienvenido a mi pagina web de presentación.</p>
             <p>Aquí teneis los titulos de los que dispongo:</p>
@@ -19,10 +21,12 @@
             <li>Formación de programación web</li>
          </div>
     </section>     
-</body>
 <footer>
+    <div class="container">
         <a href="https://github.com/juporgar/">Github</a>
         <a href="https://twitter.com/?lang=es/">Twitter</a>
-        <a href="https://www.google.com/">Contacto</a>
+        <a href="mailto:julian.porgar@gmail.com/">Contacto</a>
+    </div>
 </footer>
+</body>
 </html>
