Claim, content and color

--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi pagina web</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
     <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
-<body>
+<body> 
     <section>
         <div class="container"> 
-            <h1> Julián Luis Portalés García</h1>
-            <p> Muy buenas, bienvenido a mi pagina web de presentación.</p>
-            <p>Aquí teneis los titulos de los que dispongo:</p>
-            <li>T. Gestión Administrativa(LOE)</li>
-            <li>T. Sistemas Microinformáticos y Redes (LOE)</li>
-            <li>T.S. Administración de Sistemas Informáticos en Red (LOE) (en proceso)</li>
-            <li>Formación de programación web</li>
+            <h1> Bienvenido a la fabrica</h1>
+             
+             <p>Hola, mi nombre es <strons>Julián.</strons> He estudiado redes como programación.
+                En este ultimo apartado, me parece el más fascinante, porque he trabajado con C++, PHP, notepad++,wordpress y otros programas.
+                Y lo que más me gusta de todo, es superarme y poder ver que todas las ideas que tienes en la cabeza funcionan.
+                <p> 
+                
+                    <h3><a href="mailto:julian.porgar@gmail.com/">Hablame</a> y no perdamos el tiempo.</h3>
          </div>
     </section>     
 <footer>
     <div class="container">
         <a href="https://github.com/juporgar/">Github</a>
         <a href="https://twitter.com/?lang=es/">Twitter</a>
+        <a href="https://es.linkedin.com/">Linkedin</a>
         <a href="mailto:julian.porgar@gmail.com/">Contacto</a>
     </div>
 </footer>
