--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
     <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
-<body> 
-    <section>
+<body>   
+    <section> 
         <div class="container"> 
             <h1> Bienvenido a la fabrica</h1>
              
-             <p>Hola, mi nombre es <strons>Julián.</strons> He estudiado redes como programación.
+             <p>Hola, mi nombre es <strons>Julián.</strons> He estudiado redes y programación.
                 En este ultimo apartado, me parece el más fascinante, porque he trabajado con C++, PHP, notepad++,wordpress y otros programas.
                 Y lo que más me gusta de todo, es superarme y poder ver que todas las ideas que tienes en la cabeza funcionan.
                 <p> 
@@ -22,13 +22,13 @@
                     <h3><a href="mailto:julian.porgar@gmail.com/">Hablame</a> y no perdamos el tiempo.</h3>
          </div>
     </section>     
-<footer>
-    <div class="container">
-        <a href="https://github.com/juporgar/">Github</a>
-        <a href="https://twitter.com/?lang=es/">Twitter</a>
-        <a href="https://es.linkedin.com/">Linkedin</a>
-        <a href="mailto:julian.porgar@gmail.com/">Contacto</a>
-    </div>
-</footer>
+    <footer>
+        <div class="container">
+            <a href="https://github.com/juporgar/">Github</a>
+            <a href="https://twitter.com/?lang=es/">Twitter</a>
+            <a href="https://es.linkedin.com/">Linkedin</a>
+            <a href="mailto:julian.porgar@gmail.com/">Contacto</a>
+        </div>
+    </footer>   
 </body>
 </html>
