--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi pagina web</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 <body>   
@@ -25,7 +26,7 @@
     <footer>
         <div class="container">
             <a href="https://github.com/juporgar/">Github</a>
-            <a href="https://twitter.com/?lang=es/">Twitter</a>
+            <a href="https://twitter.com/">Twitter</a>
             <a href="https://es.linkedin.com/">Linkedin</a>
             <a href="mailto:julian.porgar@gmail.com/">Contacto</a>
         </div>
